--- a/apps/frontend/config/settings.yml
+++ b/apps/frontend/config/settings.yml
@@ -40,4 +40,4 @@ all:
 
     default_culture:        ru_RU
     charset:                utf-8
-    i18n:                   true
+    i18n:                   false
