--- a/config/doctrine/fisheryYAML.yml
+++ b/config/doctrine/fisheryYAML.yml
@@ -247,28 +247,31 @@ LocationRelief:
     id:
       primary: true
       type: integer(4)
-      autoincrement: true
     name:
       type: string(50)
       notnull: true
+    weight:
+      type: integer
 LocationFlow:
   columns:
     id:
       primary: true
       type: integer(4)
-      autoincrement: true
     name:
       type: string(50)
       notnull: true
+    weight:
+      type: integer
 LocationFundus:
   columns:
     id:
       primary: true
       type: integer(4)
-      autoincrement: true
     name:
       type: string(50)
       notnull: true
+    weight:
+      type: integer
 Comment:
   actAs:
     Blameable:
@@ -338,6 +341,8 @@ LocationType:
       unique: true
       type: string(50)
       notnull: true
+    weight:
+      type: integer
 WishList:
   columns:
     profile_id:
@@ -412,11 +417,12 @@ LocationScope:
     id:
       primary: true
       type: integer(4)
-      autoincrement: true
     name:
       unique: true
       type: string(50)
       notnull: true
+    weight:
+      type: integer
 VoteProfile:
   inheritance:
     type: column_aggregation
@@ -776,13 +782,17 @@ Photo:
         updated:
           type: int
           length: 4
+    Versionable: 
   columns:
     id:
       primary: true
       type: integer(4)
       autoincrement: true
     name:
-      type: string(36)
+      type: string(100)
+      notnull: true
+    thumb:
+      type: string(100)
       notnull: true
 PhotoLocation:
   inheritance:
@@ -873,6 +883,32 @@ Road:
       autoincrement: true
     name:
       type: string(100)
+PhotoProfit:
+  inheritance:
+    extends: Photo
+    type: column_aggregation
+    keyValue: profit
+    keyField: toward
+  columns:
+    profit_id:
+      type: integer(4)
+  relations:
+    Profit:
+      local: profit_id
+      foreign: id
+VotePhoto:
+  inheritance:
+    extends: Vote
+    keyField: toward
+    keyValue: photo
+    type: column_aggregation
+  columns:
+    photo_id:
+      type: integer(4)
+  relations:
+    Photo:
+      local: photo_id
+      foreign: id
 options:
   type: INNODB
   charset: utf8
