--- a/apps/frontend/config/app.yml
+++ b/apps/frontend/config/app.yml
@@ -3,9 +3,12 @@ all:
     algorithm_callable: [PasswordKeeper, generate]
     signin_form: FloginForm
     remember_cookie_name: ht_remember
+    routes_register: false
+    
   sfForkedApply:
     applyForm: FRegistrationForm
     mail_editable: true
+    
   sfApplyPlugin:
     apply:
       subject: "Подтверждение аккаунта на %1%"
