--- a/apps/frontend/config/view.yml
+++ b/apps/frontend/config/view.yml
@@ -9,7 +9,7 @@ default:
     language:     ru
     robots:       index, follow
 
-  stylesheets:    [lib/datepicker,main,location,comment,profile,rating,profit,user,inbox,talk,pager,address]
+  stylesheets:    [reset,base,header,main,footer,location,comment,profile,rating,profit,user,inbox,talk,pager,address,lib/datepicker]
 
   javascripts:    [lib/jquery-1.4.2.js,lib/jqueryBlockUI,lib/jqueryColor,lib/jqueryJSON,lib/datepicker,lib/tinymce/jquery.tinymce.js,app,moduleManager]
 
