--- a/apps/frontend/config/routing.yml
+++ b/apps/frontend/config/routing.yml
@@ -31,6 +31,20 @@ user_confirm:
   url:          /user/confirm/:validate
   param:        { module: sfApply, action: confirm}
   
+#profile routes
+friends:
+  url:   /friends
+  param: { module: profile, action: friends, menu friends }
+inboxes:
+  url:   /inboxes
+  param: { module: inbox, action: list, menu inboxes}
+my_locations:
+  url:   /my_locations
+  param: { module: location, action: my, menu my_locations}
+my_profile:
+  url:   /my_profile
+  param: { module: profile, action: my, menu my_profile}
+  
 #to remove nah!
   default:
   url:   /:module/:action/*
